--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,24 @@
 .Table-lText {
   text-align: left;
 }
+
+.Table {
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 20px;
+}
+
+.Table-search {
+  width: 50% !important;
+  float: right;
+  max-width: 400px;
+  min-width: 300px;
+}
+
+.Table-search > input {
+  /* text-align: end; */
+}
+
+.navbar-text {
+  margin-right: 10px;
+}
