--- a/src/screens/Login/Login.css
+++ b/src/screens/Login/Login.css
@@ -7,6 +7,6 @@
   }
   
 button {
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 20px !important;
+  margin-right: 20px !important;
 }
